@@ -110,11 +110,11 @@ budget	{display:block; width:958px; border-top:1px solid #000; padding:20px 0; b
 budget:last-of-type	  {border-bottom:0px solid #000;}
 budget:nth-of-type(1) {margin-top:0px; padding-top:0;}
 budget:nth-of-type(1):before {content:"Budget"; font-size:26px; color:#fff; background-color:#000; display:block; padding:20px 40px; margin-bottom:25px;}
-budget:nth-of-type(1) period-start:before {content:"START DATE"; font-size:14px; color:#000; width:290px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
-budget:nth-of-type(1) period-end:before	  {content:"END DATE"; font-size:14px; color:#000; width:290px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
+budget:nth-of-type(1) period-start:before {content:"START DATE"; font-size:14px; color:#000; width:289px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
+budget:nth-of-type(1) period-end:before	  {content:"END DATE"; font-size:14px; color:#000; width:289px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
 budget:nth-of-type(1) value:before		  {content:"VALUE"; font-size:14px; color:#000; width:300px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
-period-start {display:inline-block; vertical-align:top; color:#000; font-size:1.0em; width:290px; max-width:290px; padding-left:40px; line-height:1.35em;}
-period-end	 {display:inline-block; vertical-align:top; color:#000; font-size:1.0em; width:290px; max-width:290px; line-height:1.35em;}
+period-start {display:inline-block; vertical-align:top; color:#000; font-size:1.0em; width:289px; max-width:289px; padding-left:40px; line-height:1.35em;}
+period-end	 {display:inline-block; vertical-align:top; color:#000; font-size:1.0em; width:289px; max-width:289px; line-height:1.35em;}
 budget value {display:inline-block; vertical-align:top; color:#000; font-size:1.0em; width:300px; max-width:300px; padding-right:40px; line-height:1.35em;}
 
 
@@ -128,17 +128,17 @@ transaction:nth-of-type(1)			{margin-top:0px; padding-top:0;}
 transaction:nth-of-type(1):before	{content:"Transaction"; font-size:26px; color:#fff; background-color:#000; display:block; padding:20px 40px; margin-bottom:25px;}
 
 transaction:nth-of-type(1) transaction-date:before	{content:"DATE"; font-size:14px; color:#000; width:105px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
-transaction:nth-of-type(1) transaction-type:before	{content:"TYPE"; font-size:14px; color:#000; width:145px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
-transaction:nth-of-type(1) provider-org:before		{content:"PROVIDER"; font-size:14px; color:#000; width:145px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
+transaction:nth-of-type(1) transaction-type:before	{content:"TYPE"; font-size:14px; color:#000; width:144px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
+transaction:nth-of-type(1) provider-org:before		{content:"PROVIDER"; font-size:14px; color:#000; width:144px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
 transaction:nth-of-type(1) receiver-org:before		{content:"RECEIVER"; font-size:14px; color:#000; width:130px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
 transaction:nth-of-type(1) value:before				{content:"VALUE"; font-size:14px; color:#000; width:120px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
 transaction description:nth-of-type(n+1):before		{display:none;}
 transaction:nth-of-type(1) description:nth-of-type(1):before {content:"DESCRIPTION"; font-size:14px; color:#000; width:235px; display:block; padding-bottom:10px; border-bottom:2px solid #000; margin-bottom:15px; line-height:1.35em;}
 
 transaction-date	{display:inline-block; vertical-align:top; color:#000; font-size:1.0em; width:100px; max-width:100px; padding-left:40px; padding-right:5px; line-height:1.35em;}
-transaction-type	{display:inline-block; vertical-align:top; color:#000; font-size:1.0em; width:130px; max-width:130px; padding-right:15px; line-height:1.35em;}
+transaction-type	{display:inline-block; vertical-align:top; color:#000; font-size:1.0em; width:130px; max-width:130px; padding-right:14px; line-height:1.35em;}
 transaction description:nth-of-type(1) {display:inline-block; vertical-align:top; padding:0px; width:220px; max-width:220px; padding-right:15px; text-align:left; color:#000; font-size:1.0em; line-height:1.35em; border:0; background-color:transparent;}
-provider-org		{display:inline-block; vertical-align:top; color:#000; font-size:1.0em; width:130px; max-width:130px; padding-right:15px; line-height:1.35em;}
+provider-org		{display:inline-block; vertical-align:top; color:#000; font-size:1.0em; width:130px; max-width:130px; padding-right:14px; line-height:1.35em;}
 receiver-org		{display:inline-block; vertical-align:top; color:#000; font-size:1.0em; width:130px; max-width:130px; padding-right:0px; line-height:1.35em;}
 value				{display:inline-block; vertical-align:top; color:#000; font-size:1.0em; width:120px; max-width:120px; padding-right:40px; line-height:1.35em; text-align:right;}
 value span		{font-size:12px; color:#000;}
