@@ -114,12 +114,12 @@ budget value 			{display:inline-block; vertical-align:top; color:#FFF; font-size
 
 /*	Transaction table
 	============================================= */
-transaction						{display:block; width:960px; border-top:1px solid #1E90FF; padding:20px 0; border-bottom:0;}
-transaction a					{color:#FF7A00;}
-transaction a:hover				{color:#FFAB5E;}
-transaction:last-of-type		{border-bottom:0px solid #1E90FF;}
-transaction:nth-of-type(1)		{margin-top:0px; padding-top:0;}
-transaction:nth-of-type(1):before{content:"Transaction"; font-size:26px; color:#FFF; background-color:rgba(17, 46, 105, 0.9); display:block; padding:20px 40px; margin-bottom:25px;}
+transaction							{display:block; width:960px; border-top:1px solid #1E90FF; padding:20px 0; border-bottom:0;}
+transaction a						{color:#FF7A00;}
+transaction a:hover					{color:#FFAB5E;}
+transaction:last-of-type			{border-bottom:0px solid #1E90FF;}
+transaction:nth-of-type(1)			{margin-top:0px; padding-top:0;}
+transaction:nth-of-type(1):before	{content:"Transaction"; font-size:26px; color:#FFF; background-color:rgba(17, 46, 105, 0.9); display:block; padding:20px 40px; margin-bottom:25px;}
 
 transaction:nth-of-type(1) transaction-date:before	{content:"DATE"; font-size:14px; color:#FFF; width:105px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px; line-height:1.35em;}
 transaction:nth-of-type(1) transaction-type:before	{content:"TYPE"; font-size:14px; color:#FFF; width:145px; display:block; padding-bottom:10px; border-bottom:2px solid rgba(17, 46, 105, 0.9); margin-bottom:15px; line-height:1.35em;}
