@@ -2,7 +2,8 @@ Development Portal (2014-09-04 shi)
 ==============================
 Firefox fix widget height
 New widget options css fix
-Added footer of explanations for widget.
+Added footer of explanations for widget
+Fixed SAVi high visibility mode width
 
 
 Publisher Portal (2014-08-28 shi)
